welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: '=' expected but ';' found.
	for (j<-0 to nums.length-1){
^