welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var x=-1
	for (j<-0 to nums.length-1){
		if (nums(j)==value) x=j
	}
	return x	
}
